Add activity log and track walk

--- a/journal/2026-02-05.md
+++ b/journal/2026-02-05.md
@@ -25,6 +25,10 @@ Went through Jay's inventory and suggested 12 project ideas. Favorites:
 - Git credentials mounted to `/workspace/.git-credentials`
 - Binkey-data at `/workspace/repos/binkey-data`
 
+## Activity
+
+- 🚶 30 min walk with CJW (evening)
+
 ## Next
 
 - Add Google Corals to binkey-data inventory
@@ -33,4 +37,4 @@ Went through Jay's inventory and suggested 12 project ideas. Favorites:
 
 ---
 
-[[journal/index|← Journal Index]]
+[[notes/activity-log|Activity Log]] · [[journal/index|← Journal Index]]
