Add lunch at Miracle Mile Deli

--- a/journal/2026-02-05.md
+++ b/journal/2026-02-05.md
@@ -27,6 +27,7 @@ Went through Jay's inventory and suggested 12 project ideas. Favorites:
 
 ## Activity
 
+- 🍽️ Lunch with CJW at Miracle Mile Deli
 - 🚶 30 min walk with CJW (evening)
 
 ## Next
